# mcp

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml  server.json
ayubowan/: package-lock.json  package.json  test.ts
ayubowan/agents/: orchestrator.ts  shopper.ts  tools.ts
ayubowan/app/: page.tsx
ayubowan/app/api/chat/: route.ts
ayubowan/app/api/proxy-image/: route.ts
ayubowan/app/api/test/: route.ts
ayubowan/components/: CartDrawer.tsx  ChatInterface.tsx  MessageRenderer.tsx  Navbar.tsx  ProductCard.tsx
ayubowan/lib/: mcp.ts
ayubowan/store/: useStore.ts
deploy/: Caddyfile.snippet  README.md  kapruka-mcp.service  sync-to-prod.sh
docs/: api-enhancements-v2.md  checkout-api-brief.md  eagle-dash-handover.md
scripts/: explore_api.py  publish-registry.sh  setup_activity_table.py  smoke_test.py
src/: activity_log.py  cache.py  middleware.py  order_rate_limit.py  server.py  well_known.py
src/api/: client.py
src/config/: settings.py
src/static/: index.html
src/tools/: __init__.py  categories.py  delivery.py  orders.py  products.py
tests/: test_client.py
