[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kapruka-mcp"
version = "0.1.1"
description = "MCP server for Kapruka.com — Sri Lanka's largest e-commerce platform"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.30.0",
    "starlette>=0.37.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]

[project.scripts]
kapruka-mcp = "src.server:main"
kapruka-cli = "cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
